--- a/css/styling.css
+++ b/css/styling.css
@@ -9,6 +9,14 @@
 }
 .keyboard-container {
   display: inline-flex;
+  background-color: rgb(0, 119, 16);
+  border-radius: 10px;
+}
+.custom-button-hangman:hover {
+  cursor: pointer;
+  font-weight: bold;
+  font-size: x-large;
+  transition: 0.5s;
 }
 
 span {
@@ -25,15 +33,15 @@ span {
   outline: #00a824;
 }
 .hangman-text {
-  background-color: rgba(0, 0, 0, 0.644);
+  background-color: rgb(50, 132, 255);
   width: 15%;
   color: #ffffff;
   text-align: center;
   margin: 0 auto;
-  border-radius: 25%;
+  border-radius: 25px;
 }
 body {
-  background-image: url("Images\\ny-bg.jpg");
+  background-image: url("../Images/ny-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
@@ -49,7 +57,7 @@ body {
   align-items: center;
   justify-content: center;
 }
-/* */
+
 .login-container {
   position: fixed;
   left: 1.66cm;
