--- a/css/web_quiz_styling.css
+++ b/css/web_quiz_styling.css
@@ -52,52 +52,42 @@
   font-weight: bold;
 }
 #current-question-count {
-  color: rgb(0, 0, 0);
+  color: rgb(0, 255, 13);
   font-weight: bold;
 }
 #max-question {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 0, 0);
   font-weight: bold;
 }
 
 .answer-boxes {
-  position: relative;
-  display: block;
   background-color: rgba(251, 255, 0, 0);
   width: 300px;
   height: 100px;
   border-radius: 15px;
   bottom: -5cm;
-  right: -16cm;
 }
 
 .quiz-title {
   background-color: rgb(251, 255, 0);
-
-  display: inline-block;
   padding: 0.5cm;
   border-radius: 50px;
 }
 .quiz-current-question {
-  position: absolute;
   background-color: rgb(255, 255, 255);
-  text-align: center;
-  display: inline-block;
   padding: 0.5cm;
   border-radius: 50px;
-  bottom: -1cm;
-  left: 16cm;
-
   width: 300px;
   height: 100px;
 }
 .question-status {
-  position: relative;
-  display: block;
-  top: 3.4cm;
+  color: aliceblue;
+  width: 300px;
 }
 .quiz-container {
+  width: 300px;
   text-align: center;
   position: relative;
   bottom: -100px;
+  margin: auto;
 }
