--- a/css/web_quiz_styling.css
+++ b/css/web_quiz_styling.css
@@ -81,6 +81,7 @@
   height: 100px;
 }
 .question-status {
+  background-color: #000;
   color: aliceblue;
   width: 300px;
 }
@@ -90,4 +91,20 @@
   position: relative;
   bottom: -100px;
   margin: auto;
+}
+.score-bar {
+  background-color: rgba(0, 0, 0, 0.834);
+  width: 300px;
+  height: 35px;
+  border-radius: 5px;
+  font-size: x-large;
+  color: white;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000,
+    1px 1px 0 #000;
+}
+.score {
+  color: rgb(0, 255, 0);
+}
+.score-red {
+  color: rgb(255, 0, 0);
 }
