--- a/css/web_quiz_styling.css
+++ b/css/web_quiz_styling.css
@@ -108,3 +108,12 @@
 .score-red {
   color: rgb(255, 0, 0);
 }
+.highscore-increase {
+  color: rgb(0, 255, 0);
+  font-size: 1.5em;
+  transition: font-size 0.5s ease-in-out;
+}
+
+.highscore {
+  color: rgb(0, 255, 0);
+}
