--- a/css/games_styling.css
+++ b/css/games_styling.css
@@ -1,7 +1,7 @@
 body {
   background-image: url("../Images/games-bg.jpg");
   background-repeat: no-repeat;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   background-size: cover;
 }
 .game-bar {
